# wechat-auto-typesetter

./: .gitignore  README.md  pyproject.toml  requirements.txt
batch_input/: lc.md  sy.md
examples/: SKILL.md  article.md  pipeline.config.json  theme.json
src/wechat_typesetter/: __init__.py  batch.py  cli.py  formatter.py  kimi.py  web.py
tests/: test_formatter.py  test_kimi.py  test_web.py
